# kinect_grabber_windows

./: CMakeLists.txt  README.md  kinect2_grabber.h  main.cpp
